[package]
name = "query-string-builder"
description = "A query string builder for percent encoding key-value pairs"
authors = ["Markus Mayer"]
version = "0.5.1"
edition = "2021"
repository = "https://github.com/sunsided/query-string-builder"
keywords = ["url", "query-string", "query-argument"]
categories = ["web-programming::http-client"]
readme = "README.md"
license = "EUPL-1.2"

[dependencies]
percent-encoding = { version = "2.3.0", default-features = false, features = ["std"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
